Implementa ajustes funcionales de j
